--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.1",
+    "jose": "^5.9.6",
     "lucide-react": "^0.473.0",
     "next": "15.1.6",
     "react": "^19.0.0",
